# SpaceShipRadar

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.ps1  template.env
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: test.yml
doc/detailed-design/: conf.py  index.rst  update_doc_from_src.py
doc/diagrams/: README.md  deployment.puml  found_object.puml  message.puml  state.puml  tracking_sequence.puml
doc/findings/: coordinate_translation.md
doc/requirements/: README.md
doc/uml/: README.md  ar_object.puml  block.drawio  contour.puml  deployment.md  deployment.puml  get_contours.puml  main_loop.puml  message.puml  mqtt.drawio  pre_main.puml  rotation_calc.drawio  state.puml  swarch.puml  versuchsaufbau.drawio  what_is_rotation.drawio  what_up.drawio
docker/: docker-compose.yml  mqtt_subscriber.py
src/calibration/: README.md  calibration.pkl
src/calibration/calibration_images/: README.md
src/img/: README.md
src/space_ship_radar/: calibrate_camera.py  real_camera.py  space_ship_radar.py  version.py
tests/: test_ar_authority.py  test_aruco.py  test_finder.py  test_found_object_master.py  test_lord_scaler.py  test_object_finder.py  test_scaler.py  test_transformer.py
webots/protos/: README.md  Zumo32U40.proto  Zumo32U41.proto  Zumo32U42.proto  Zumo32U43.proto  Zumo32U44.proto  Zumo32U47.proto  Zumo32U4_0.proto  Zumo32U4_1.proto  Zumo32U4_2.proto  Zumo32U4_3.proto  Zumo32U4_4.proto
webots/worlds/: .LineFollowerTrack.wbproj  LineFollowerTrack.wbt  WorkSpace.wbt
(+30 files in other folders)
