[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "SpaceShipRadar"
version = "1.0.0"
description = "Visually tracks Zumo-robots"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Marc Trosch", email = "marc.trosch@newtec.de" }
]
license = {text = "BSD 3-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD 3-Clause",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "toml>=0.10.2"
]

[project.optional-dependencies]
test = [
  "pytest > 5.0.0",
  "pytest-cov[all]"
]

[project.urls]
documentation = "https://github.com/NewTec-GmbH/SpaceShipRadar"
repository = "https://github.com/NewTec-GmbH/SpaceShipRadar"
tracker = "https://github.com/NewTec-GmbH/SpaceShipRadar/issues"

[project.scripts]
space_ship_radar = "space_ship_radar.space_ship_radar:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools.package-data]
space_ship_radar = ["pyproject.toml"]
